{
    "name": "InputSystem",
    "maps": [
        {
            "name": "Player",
            "id": "0892e399-4008-4ee9-81fd-838ac765eeac",
            "actions": [
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "4081842a-43b5-4338-893e-e62fcc76bf32",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d192fb21-09fc-48a3-855b-06420ea56e00",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "d8892924-a917-44df-906b-b12414682af7",
            "actions": [
                {
                    "name": "Point",
                    "type": "PassThrough",
                    "id": "e22e307e-ea8e-4819-a1de-20b81be1a0bc",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftClick",
                    "type": "Button",
                    "id": "186fc14f-74f7-429a-baf7-d8c002d9e071",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightClick",
                    "type": "Button",
                    "id": "f69e33cc-dbc4-4e30-af4c-d4fa22f69905",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "47368942-1c8d-41aa-837d-f925176eea58",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Point",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "64bbf9f0-a745-4b98-8be2-08c8d503b862",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Point",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ef62b4d7-ac22-4fb1-b92a-cc7421430d94",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8fff0884-09cc-474a-bd94-18d4d5596c81",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}